@@ -487,6 +487,9 @@ Extension Modules
 Library
 -------
 
+- Bug #1445068: getpass.getpass() can now be given an explicit stream
+  argument to specify where to write the prompt.
+
 - Patch #1462313, bug #1443328: the pickle modules now can handle classes
   that have __private names in their __slots__.
 
